# swe-opd-modal-teacher

./: .gitignore  README.md  modal_app.py  pyproject.toml
config/bootstrap/: modal_teacher.example.env  modal_teacher.local.env  modal_teacher_qwen35_35b.env  modal_teacher_qwen3_coder_next.env
scripts/: common.sh  deploy.sh  get_url.sh  prefetch_model.sh  setup.sh  status.sh  test_generate.sh  test_generate_input_ids.sh  test_health.sh  verify.sh
swe_opd_modal_teacher/: __init__.py  runtime.py  settings.py
